# CardioRisk-NN

./: .env  .gitignore  .markdownlint.json  AGENTS.md  Dockerfile  NOTES.md  README.md  TODO.md  baseline.py  calibrate.py  codex.md  cross_validate.py  data_utils.py  evaluate.py  predict.py  pyproject.toml  requirements.txt  setup.cfg  setup.sh  train.py  train_tf.py
.github/workflows/: ci.yml
cardiorisk/: __init__.py  calibrate.py  cross_validate.py  evaluate.py  model.py  train.py  train_tf.py
docs/: dataset.md  overview.md
docs/source/: conf.py  index.rst
tests/: test_baseline.py  test_calibrate.py  test_cross_validate.py  test_cross_validate_baseline.py  test_cross_validate_no_fast.py  test_cross_validate_tf.py  test_evaluate_loader.py  test_evaluate_saved_model.py  test_metrics.py  test_predict.py  test_smoke.py  test_train_fast.py  test_train_restore.py  test_train_tf_fast.py
