[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cardiorisk-nn"
version = "0.1.3"
description = "Neural network that predicts coronary artery disease"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Ivan Starostin", email = "ivan.starostin@ue-germany.de"},
]
requires-python = ">=3.10"
dependencies = [
    "torch==2.3.*",
    "tensorflow==2.19.*",
    "pandas",
    "scikit-learn",
    "joblib",
    "matplotlib",
]

[project.scripts]
cardiorisk-train = "train:main"
cardiorisk-train-tf = "train_tf:main"
cardiorisk-evaluate = "evaluate:main"
cardiorisk-calibrate = "calibrate:main"
cardiorisk-cross-validate = "cross_validate:main"
cardiorisk-baseline = "baseline:main"
cardiorisk-predict = "predict:main"

[tool.setuptools]
py-modules = [
    "baseline",
    "calibrate",
    "cross_validate",
    "data_utils",
    "evaluate",
    "model",
    "predict",
    "train",
    "train_tf",
]

[tool.setuptools.package-data]
"*" = ["data/heart.csv"]
