[metadata]
name = cardiorisk
version = 0.1.0
description = Lightweight heart disease prediction model
license = MIT

[options]
packages = find:
python_requires = >=3.10

[options.entry_points]
console_scripts =
    cardiorisk-train = cardiorisk.train:main
    cardiorisk-train-tf = cardiorisk.train_tf:main
    cardiorisk-evaluate = cardiorisk.evaluate:main
    cardiorisk-calibrate = cardiorisk.calibrate:main
    cardiorisk-cross-validate = cardiorisk.cross_validate:main
